2008-10-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_local.erl: Fix a bug where an error stanza was not
	created correctly, leading to ejabberd_c2s crash.

2008-10-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_sm.erl (process_iq/3): Fix a bug where we were matching
	on #iq.type instead of #iq.kind, resulting in bad-request sent to the
	client.

	* src/ejabberd_c2s.erl (process_privacy_iq/4): mod_privacy & friends
	may return an empty list. Thanks to Pablo Polvorin!

	* src/mod_roster_odbc.erl (get_jid_info/4): Fix a confusion between
	#jid and tuples. Thanks to Pablo Polvorin!

	* src/mod_privacy.erl, src/mod_privacy_odbc.erl: Convert to exmpp.
	Thanks to Pablo Polvorin!

	* src/mod_privacy.erl: The Mnesia table wasn't updated when converting
	from an old schema.

	* src/ejabberd_sm.erl, src/mod_roster.erl, src/mod_roster_odbc.erl:
	Fix status handling by always using binaries: until now, we were
	mixing lists and binaries in a non-working way. Thanks to Pablo
	Polvorin!

2008-10-02  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_roster_odbc.erl: Fix a bug where a JID represented as a
	tuple was used in a function expecting a #jid; thanks to Pablo
	Polvorin again!

	* src/mod_announce.erl (get_stored_motd):
	exmpp_xml:get_element_by_name/2 is deprecated; use
	exmpp_xml:get_element/2 instead.

	* src/mod_echo.erl: In #jid, when the node isn't specified, it
	defaults to the atom "undefined", not an empty binary. Fix a bug where
	we expected an #xmlelement to have only one #xmlcdata child.

	* src/mod_last_odbc.erl (start/2, stop/1): The IQ registration must
	use a namespace as atom, not list.
	(process_local_iq/3, process_sm_iq/3, get_last/3): These functions
	receive an #iq, not an #xmlel.
	(store_last_info/4, remove_user/2): Add try/catch block around
	exmpp_stringprep:*prep/1 uses.

2008-10-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
